syntax = "proto3";

import "google/protobuf/any.proto";

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message TestWithAny {
  string test = 1;
  google.protobuf.Any sds = 2;
  repeated bool testss = 3;
}